--- a/trunk/OsmNavigator/AndroidManifest.xml
+++ b/trunk/OsmNavigator/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.OsmNavigator">
+    <uses-permission 
+        android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission 
+        android:name="android.permission.ACCESS_MOCK_LOCATION" />    
     <application android:icon="@drawable/icon2" android:label="@string/app_name">
         <activity android:name=".OsmReader" android:label="@string/app_name">
             <intent-filter>
